[package]
name = "rumeter-component"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
authors = ["Liudao <jimmyseraph@testops.vip>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jimmyseraph/rumeter"
homepage = "https://github.com/jimmyseraph/rumetercar"
description = """
A load test platform for writing a load test script by rust.
Just like JMeter, but it prefer using like SDK, not a GUI tool.
"""
categories = ["load-test", "test"]
keywords = ["io", "async", "non-blocking", "load-test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.6"
serde_json = "1.0.81"
tracing = "0.1.34"
futures = "0.3.21"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.53"
chrono = "0.4.19"