[package]
name = "rumeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
type-cli = "0.0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
async-trait = "0.1.53"

rumeter-component = {path="../rumeter-component"}