[package]
name = "rumeter"
version = "0.1.3"
edition = "2021"
authors = ["Liudao <jimmyseraph@testops.vip>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
type-cli = "0.0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
async-trait = "0.1.53"

rumeter-component = {path="../rumeter-component"}